--- a/ApCuentasClaras/ApCuentasClaras.csproj
+++ b/ApCuentasClaras/ApCuentasClaras.csproj
@@ -46,11 +46,17 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Aplicacion.cs" />
-    <Compile Include="Form1.cs">
+    <Compile Include="Calculadora.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="Calculadora.Designer.cs">
+      <DependentUpon>Calculadora.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Conver.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Conver.Designer.cs">
+      <DependentUpon>Conver.cs</DependentUpon>
     </Compile>
     <Compile Include="PantallaDePresentacion.cs">
       <SubType>Form</SubType>
@@ -60,8 +66,11 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="Calculadora.resx">
+      <DependentUpon>Calculadora.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Conver.resx">
+      <DependentUpon>Conver.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="PantallaDePresentacion.resx">
       <DependentUpon>PantallaDePresentacion.cs</DependentUpon>
